<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/text_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horizontal_separator"
        app:layout_constraintStart_toStartOf="@+id/bar4"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/bar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/separator_symbol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_data" />


    <TextView
        android:id="@+id/bar1_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/separator_symbol"
        app:layout_constraintEnd_toEndOf="@+id/text_data"
        app:layout_constraintTop_toTopOf="@+id/bar1" />

    <TextView
        android:id="@+id/bar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separator_symbol"
        app:layout_constraintStart_toStartOf="@+id/bar1"
        app:layout_constraintTop_toBottomOf="@+id/bar1" />


    <TextView
        android:id="@+id/bar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separator_symbol"
        app:layout_constraintStart_toStartOf="@+id/bar2"
        app:layout_constraintTop_toBottomOf="@+id/bar2" />


    <TextView
        android:id="@+id/bar3_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separator_symbol"
        app:layout_constraintEnd_toEndOf="@+id/bar1_a"
        app:layout_constraintTop_toTopOf="@+id/bar3" />

    <TextView
        android:id="@+id/bar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separator_symbol"
        app:layout_constraintStart_toStartOf="@+id/bar3"
        app:layout_constraintTop_toBottomOf="@+id/bar3" />

    <TextView
        android:id="@+id/bar4_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/separator_symbol"

        app:layout_constraintStart_toEndOf="@+id/country_capital"
        app:layout_constraintTop_toBottomOf="@+id/bar3" />

    <TextView
        android:id="@+id/bar5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separator_symbol"
        app:layout_constraintStart_toStartOf="@+id/bar4"
        app:layout_constraintTop_toBottomOf="@+id/bar4" />

    <TextView
        android:id="@+id/bar5_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separator_symbol"
        app:layout_constraintEnd_toEndOf="@+id/bar1_a"
        app:layout_constraintTop_toTopOf="@+id/bar5" />

    <TextView
        android:id="@+id/text_data_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/horizontal_separator"
        app:layout_constraintStart_toStartOf="@+id/bar5"
        app:layout_constraintTop_toBottomOf="@+id/bar5" />

    <TextView
        android:id="@+id/country_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxLines="1"
        android:minWidth="117dp"
        android:text="@string/country_name_place"
        android:textSize="11.5sp"
        app:layout_constraintStart_toStartOf="@+id/bar2"
        app:layout_constraintTop_toBottomOf="@+id/bar1" />


    <TextView
        android:id="@+id/country_capital"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="60dp"
        android:text="@string/capital_name_place"
        android:textSize="11.5sp"
        app:layout_constraintBottom_toBottomOf="@+id/bar4"
        app:layout_constraintStart_toStartOf="@+id/country_name"
        app:layout_constraintTop_toBottomOf="@+id/bar3"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/country_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/separator_with_code"
        android:textSize="11.5sp"
        app:layout_constraintStart_toEndOf="@+id/country_name"
        app:layout_constraintTop_toTopOf="@+id/country_name" />




</androidx.constraintlayout.widget.ConstraintLayout>

